src/app/styles/page.module.scss
.imageBgContainer {
	width: 100vw;
	height: 85vh;
	position: relative;
	min-height: 700px;
	max-height: 800px;
	color: #fff;
	display: flex;
	justify-content: center;
	align-items: center;
	background-color: rgba(0, 0, 0, 0.6);
	> div:first-child {
		overflow: hidden;
		position: absolute;
		z-index: -9;
		width: 100%;
		height: 100%;
		> img {
			width: 100%;
			height: 100%;
			position: absolute;
			background-size: cover;
			object-fit: cover;
			background-repeat: no-repeat;
			background-position: 50% 50%;
			animation: bgAnimate 7s ease-in-out infinite;
			z-index: -8;
		}
		> .img {
			z-index: -1;
		}
	}
}
@keyframes bgAnimate {
	0% {
		transform: scale(1);
	}
	50% {
		transform: scale(1.1);
	}
	100% {
		transform: scale(1);
	}
}

.imageBgText {
	display: flex;
	flex-direction: column;
	gap: 20px;
	justify-content: center;
	align-items: center;
	max-width: 900px;
	text-align: center;
	padding: 0 5%;
}
.imageBgText div {
	font-style: normal;
	font-weight: 700;
	font-size: 3.5rem;
	line-height: 5rem;
}
.imageBgModalShow {
	margin-bottom: 200px;
}
.imageBgModal {
	min-width: 70%;
	min-height: 207px;
	height: fit-content;
	background-color: #fff;
	position: absolute;
	top: 85%;
	box-shadow: 0px 10px 40px rgba(0, 0, 0, 0.1);
	border-radius: 16px;
	padding: 30px;
	color: #000;
	display: flex;
	justify-content: center;
	align-items: center;
	gap: 30px;
	max-width: 90%;
	flex-wrap: wrap;
}
.imageBgModal > div {
	border: 1px solid #000;
	padding: 1.25rem 1.875rem;
	border-radius: 8px;
	width: 276px;
	display: flex;
	position: relative;
	overflow: hidden;
	label {
		margin-left: auto;
		cursor: pointer;
	}
	p {
		margin-bottom: 10px;
	}
	input {
		width: 0.1px;
		height: 0.1px;
		transform: translateX(-50px);
		border: none;
		outline: none;
	}
	.input {
		transform: translateX(0px);
		width: 100%;
		height: 100%;
		position: absolute;
		top: 0;
		left: 0;
		visibility: visible;
		border-radius: 8px;
		padding: 20px;
		outline: auto;
	}
}
.exclusiveBg {
	background: #f2f7f6;
	margin-top: 50px;
}
.exclusiveContent {
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
	align-items: center;
	max-width: 1440px;
	padding: 0 5%;
	margin: auto;
	padding: 50px 5%;
	gap: 30px;

	> div:not(:last-child) {
		border-right: 1px solid #505050;
		padding-right: 20px;
	}
	> div {
		height: 100px;
		flex: 1;
		display: flex;
		align-items: center;
		height: 85px;
		min-width: 300px;
	}
	.exclusive {
		display: flex;
		justify-content: center;
		align-items: flex-start;
		gap: 25px;
		img {
			margin-top: 5px;
		}
		h4 {
			line-height: 2rem;
			font-size: 1.5rem;
		}
		p {
			margin-top: 10px;
		}
	}
}
.about {
	max-width: 1440px;
	padding: 0 5%;
	margin: auto;
	margin-top: 30px;
	display: flex;
	align-items: center;
	gap: 50px;

	.video {
		position: relative;
		width: 640px;
		height: 640px;
	}
	.pause {
		background-color: rgba(0, 0, 0, 0.5);
		position: absolute;
		width: 100%;
		height: 100%;
		display: flex;
		justify-content: center;
		align-items: center;
		z-index: 1;
		padding: 30px;

		img {
			width: 200px;
			height: 200px;
			max-width: 100%;
			max-height: 100%;
		}
	}

	video {
		width: 640px;
		height: 640px;
	}
	h2 {
		font-size: 2rem;
		line-height: 2.5rem;
	}
	p {
		margin-top: 1.875rem;
		line-height: 32px;
	}
}

.form {
	max-width: 1440px;
	padding: 0 5%;
	margin: auto;
	margin-top: 50px;
	display: flex;
	flex-direction: column;
	align-items: center;
	gap: 30px;
	input {
		max-width: 750px;
		width: 100%;
		height: 60px;
		border: 1px solid #505050;
		border-radius: 8px;
		padding-left: 30px;
		::placeholder {
			font-family: objectivity;
		}
	}
}
@media (max-width: 900px) {
	.about {
		flex-direction: column;

		.video {
			position: relative;
			width: 100%;
			height: 100%;
		}

		video {
			width: 100%;
			height: auto;
		}
		h2 {
			text-align: center;
		}
	}
	.imageBgModalShow {
		margin-bottom: 500px;
	}

	.imageBgModal {
		flex-direction: column;
		width: 100%;
		top: 100%;
		gap: 20px;
		height: 450px;
		max-width: unset;
		> div {
			padding: 1.25rem 0.9375rem;
			width: 100%;
		}
	}

	.exclusiveContent {
		flex-direction: column;
		align-items: flex-start;
		margin: auto;
		> div:not(:last-child) {
			padding-right: 0;
			border-right: none;
			padding-bottom: 20px;
			border-bottom: 1px solid #000;
			width: 100%;
		}
		> div {
			min-width: unset;
		}
	}
}

